[package]
edition = "2021"
name = "tasoller-usb-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw_sync = "0.1.5"
rusb = "0.9"
shared_memory = "0.12.4"
tokio = {version = "1", features = ["full"]}
windows = "0.34.0"
windows-sys = {version = "0.34.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"]}

[[bin]]
name = "usb-server"
path = "src/main.rs"
